feat: API ans Services refactored and enhanced - changed method and variable spelling to english - implemented more player and games endpoints - CorsConfig added for future path restrictions - Changed currentPlayer to PlayerProfile - Refactored Game and Player Mapper - added values to API-Error - implemented new ExceptionHandlers - extended validation for game and player
